# FortunaHub

./: .env.example  .gitignore  .lefthook.yml  .pre-commit-config.yaml  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  lefthook.yml  pyproject.toml  ruff.toml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/api_docs/: examples.py  responses.py  schemas.py
backend/backend/: asgi.py  settings.py  urls.py
backend/backend/api_docs/: schemas.py
backend/backend/apps/authentication/: auth.py
backend/backend/apps/bookings/: admin.py  apps.py  docs.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/backend/apps/catalog/: admin.py  apps.py  docs.py  exceptions.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/backend/apps/core/: admin.py  apps.py  docs.py  exceptions.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/backend/apps/core_auth/: apps.py  auth.py
backend/backend/apps/customers/: admin.py  apps.py  models.py  serializers.py  validators.py
backend/backend/apps/inventory/: admin.py  apps.py  docs.py  exceptions.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/backend/apps/order/: apps.py
backend/backend/apps/permissions/: admin.py  apps.py  models.py
backend/backend/apps/products/: admin.py  apps.py  docs.py  exceptions.py  models.py  (+4 more)
backend/backend/services/: booking_service.py  core_service.py  customer_service.py  inventory_service.py  pricing_service.py
backend/backend/utils/: django_validators.py  drf_validators.py
backend/backend/validators/: django_validators.py  drf_validators.py  validation.py
telegram-bot/: .env.example  Dockerfile  backend_api.py  bot_api.py  bot_instance.py  handlers.py  logger.py  main.py  pyproject.toml  requirements.txt
telegram-bot/api/: routers.py
telegram-bot/bot/: core.py  handlers.py  start.py
telegram-bot/client/: http_client.py  scemas.py
(+264 files in other folders)
