[project]
name = "fortunahub-backend"
version = "0.1.0"
description = "Backend for FortunaHub project"
authors = [
    {name = "Egor Shishkin",email = "shishkin.es@edu.spbstu.ru"},
    {name = "Maxim",email = "maksimalexandrov.2006@gmail.com"},
    {name = "Eevandeya",email = "eevandeya@gmail.com"},
]
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "phonenumbers (>=9.0.10,<10.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend = "../ruff.toml"
