[project]
name = "fortunahub-bot"
version = "0.1.0"
description = "Telegram bot for FortunaHub project"
authors = [
    {name = "Egor Shishkin",email = "shishkin.es@edu.spbstu.ru"},
    {name = "Maxim",email = "maksimalexandrov.2006@gmail.com"},
    {name = "Eevandeya",email = "eevandeya@gmail.com"},
]
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-decouple (>=3.8,<4.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend = "../ruff.toml"
